--- a/src/index.less
+++ b/src/index.less
@@ -1,1 +1,23 @@
 @import '~antd/dist/antd.less';
+
+h1,h2,h3,h4,h5,h6,body,ul,p{
+    margin:0;
+}
+body{
+    color: #fff;
+    background-color:#1C1C1C;
+    .ant-layout-header{
+        background-color:#2A2A2A
+    }
+    .mainbody{
+        min-height:calc(100vh - 70px - 64px);
+        background-color: #1C1C1C
+    }
+    .ant-layout-footer{
+        background-color: #2A2A2A
+    }
+    .header-wrap{
+        width:1000px;
+        margin:0 auto;
+    }
+}
