modefied: 登录注册开发页面

--- a/src/index.less
+++ b/src/index.less
@@ -18,7 +18,7 @@ body{
         background-color: #2A2A2A
     }
     .header-wrap{
-        width:1000px;
-        margin:0 auto;
+       
+        // margin:0 auto;
     }
 }
