modefied: 首页焦点图和单机游戏推荐模块联调

--- a/src/pages/home/hotpc/index.module.css
+++ b/src/pages/home/hotpc/index.module.css
@@ -38,3 +38,13 @@
     background-position:left top;
     background-repeat:no-repeat;
 }
+.hotItemList{
+    margin:0;
+    padding:0;
+}
+.hotItemList li{
+    margin:0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+}
