modefied: export database

--- a/src/index.less
+++ b/src/index.less
@@ -22,3 +22,20 @@ body{
         // margin:0 auto;
     }
 }
+.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn{
+    color:red;
+    font-weight:bold;
+}
+.ant-tabs-ink-bar{
+    background:red;
+}
+.ant-tabs-top > .ant-tabs-nav::before, .ant-tabs-bottom > .ant-tabs-nav::before, .ant-tabs-top > div > .ant-tabs-nav::before, .ant-tabs-bottom > div > .ant-tabs-nav::before{
+    border-bottom-color:#ccc;
+}
+.ant-tabs-tab-btn:focus, .ant-tabs-tab-remove:focus, .ant-tabs-tab-btn:active, .ant-tabs-tab-remove:active{
+    color:red;
+}
+.ant-tabs-tab:hover{
+    color:#1C1C1C;
+    
+}
