--- a/src/index.less
+++ b/src/index.less
@@ -21,6 +21,9 @@ body{
        
         // margin:0 auto;
     }
+    .ant-layout-footer{
+        color:#fff
+    }
 }
 .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn{
     color:red;
