--- a/src/pages/home/hotpc/index.module.css
+++ b/src/pages/home/hotpc/index.module.css
@@ -47,6 +47,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .pcMore{
     text-align:center;
