modefied: 单机详情页评论组件

--- a/src/pages/pcDetail/components/picshow/index.module.css
+++ b/src/pages/pcDetail/components/picshow/index.module.css
@@ -29,3 +29,30 @@
     padding-left:10px;
     box-sizing: border-box;
 }
+.scrollWrap{
+    margin-top:10px;
+    height:400px;
+    width:300px;
+    overflow-x:hidden;
+}
+.smallList{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap:wrap;
+   
+}
+.smallList li{
+    margin-top:20px;
+    width:120px;
+    height:90px;
+    background:green;
+    margin-right:10px;
+    background-size:cover;
+    background-repeat:'no-repeat';
+    background-position: center;
+    border:3px solid #fff;
+    
+}
+.smallList  :global(.active){
+    border:3px solid #67bdee; 
+}
