--- a/src/index.less
+++ b/src/index.less
@@ -46,3 +46,41 @@ body{
     color:#1C1C1C;
     
 }
+
+//重置滚动条
+
+::-webkit-scrollbar {
+ 
+    width: 10px;
+ 
+    height: 10px;
+}
+
+/*定义滚动条轨道 内阴影+圆角*/
+ 
+::-webkit-scrollbar-track {
+    /*背景内阴影*/
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);*/
+ 
+    border-radius: 10px;
+    /*滚动条背景颜色*/
+    /*background-color: rgba(0, 163, 245, 0.4);*/
+ 
+}
+
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb {
+ 
+    border-radius: 10px;
+ 
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+ 
+    background-color: #eff1f7;
+ 
+}
+.ant-comment-actions li{
+    width:100%;
+}
+.ant-affix{
+    z-index:20000;
+}
